--- a/PROJETOBOOTSTRAP/html-css/exercicios/ex010/index.html
+++ b/PROJETOBOOTSTRAP/html-css/exercicios/ex010/index.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     <h1>USANDO LINKS EXTERNOS</h1>
-    <p>VOCÊ PODE ACESSAR O MEU REPOSITORIO PUBLICO NO GIT</p>
+    <p>VOCÊ PODE ACESSAR O MEU <a href="https://github.com/jhonatanlinux" target="_blank" rel="external">REPOSITORIO PUBLICO NO GIT</a></p> <!-- target neste caso, funciona para abrir o link em uma nova guia-->
+    <p>VOCE TAMBEM PODE <a href="http://www.linkedin.com/in/jhonatanalv3s">ACESSAR</a> O MEU CANAL DO LINKEDIN</p>
 
-   
+    <h1>USANDO LINK INTERNOS</h1>
+    <p>ESTA É A PRIMEIRO PAGINA DO SITE, SE VOCE QUIZER PODE ACESSAR A MINHA <a href="pag002.html" rel="next" target="_self">SEGUNDA PAGINA</a></p>
+
+    <p>VOCE TAMBEM PODE ACESSAR A NOSSA <a href="noticias/pag003.html" rel="next" target="_self">PAGINA DE NOTICIAS</a></p>
+
+
+    <h1>LINKS PARA DOWNLOADS</h1>
+    <ul>
+        <li><a href="livro/ponteNova_bloqueados.PDF" download="ponteNova_bloqueados.PDF" type="appication/pdf">BAIXAR O LIVRO EM PDF</a></li>
+        <li><a href="livro/ponteNova_bloqueados.zip" download="ponteNova_bloqueados.zip" type="appication/zip">LIVRO COMPACTADO EM ZIP</a></li> <!-- download e type neste caso, funciona para fazer o download do arquivo do site-->
+    </ul>
 </body>
 </html>
