--- a/PROJETOBOOTSTRAP/html-css/exercicios/ex011/index.html
+++ b/PROJETOBOOTSTRAP/html-css/exercicios/ex011/index.html
@@ -16,5 +16,12 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto_m.png" type="image/png"> <!-- ESTE COMPORTAMENTO INDICA QUE SE O NAVEGADOR TIVER MENOS DE 1050 PIXEL ELE MUDARÁ PARA A IMGEM MEDIA-->
         <img src="imagens/foto_g.png" alt="imagem flexivel">
     </picture>
+
+    <h1>REPRODUZINDO AUDIO</h1>
+    <p>VAMOS APRENDER A REPRODUZIR AUDIO EM HTML</p>
+    <audio preload="metadata" autoplay controls loop>
+        <source src="midia/teste_musica.mp3" type="audio/mpeg">
+        <p>INFELIZMENTE SEU NAVEGADOR NÃO PODE REPRODUZIR SONS, CLIQUE <a href="midia/teste_musica.mp3"></a> PARA BAIXAR A MUSICA</a></p>
+    </audio>
 </body>
 </html>
